; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_fix-u-media-header.c_check_options.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_fix-u-media-header.c_check_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@ofname = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [16 x i8] c"no %s specified\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"output file\00", align 1
@if_info = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str.2 = private unnamed_addr constant [11 x i8] c"input file\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_options() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @ofname, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @ERR(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %19

7:                                                ; preds = %0
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @if_info, i32 0, i32 0), align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %7
  %11 = call i32 @ERR(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %19

12:                                               ; preds = %7
  %13 = call i32 @get_file_stat(%struct.TYPE_3__* @if_info)
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* %2, align 4
  store i32 %17, i32* %1, align 4
  br label %19

18:                                               ; preds = %12
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %18, %16, %10, %5
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @ERR(i8*, i8*) #1

declare dso_local i32 @get_file_stat(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
